--- a/back/pom.xml
+++ b/back/pom.xml
@@ -41,6 +41,16 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
