--- a/back/src/main/resources/application-dev.yml
+++ b/back/src/main/resources/application-dev.yml
@@ -10,3 +10,5 @@ tempAddress:
   D:\zhuomian\homework\temp\
 homeworkAddress:
   D:\zhuomian\homework\upload\homework\
+certAddress:
+  D:\zhuomian\homework\cert\
