--- a/back/src/main/resources/application-prod.yml
+++ b/back/src/main/resources/application-prod.yml
@@ -9,3 +9,5 @@ tempAddress:
   /home/zym/homework/temp/
 homeworkAddress:
   /home/zym/homework/upload/homework/
+certAddress:
+  /home/zym/homework/cert/
